sonar Qube corrections